--- a/cripto/src/Components/NavBar/style.css
+++ b/cripto/src/Components/NavBar/style.css
@@ -5,25 +5,38 @@
 
 }
 
-header {
-    background-color: #333;
+body {
+    background: linear-gradient(to bottom, #000000, #272042 );
+    height: 100vh;
 }
+
+header {
+    background-color: transparent;
+   
+}
+
 .logo {
-    background: url("../NavBar/image.png");
-    width: 120px;
-    height: 120px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    opacity: 70%;
-
-
+    display: flex;
+    justify-content: start;
+    height: 20px;
+    width: 20px;
 }
 
 .navbar{
 color: aliceblue;
 display: flex;
 justify-content: end;
+margin: 0px;
 gap: 15px;
 padding: 26px;
 }
-    
+
+.navbar:hover {
+    cursor: pointer;
+    color: #482252;
+    transition: 0.5s;
+}
+
+.imgMoeda {
+    margin-right: 100px;
+}
