--- a/cripto/src/Components/style.css
+++ b/cripto/src/Components/style.css
@@ -32,7 +32,7 @@ padding: 26px;
 }
 
 .Link {
-    margin-top: 10px;
+    margin-top: 16px;
     text-decoration: none;
     color: aliceblue;
     font-size: 26px;
@@ -48,11 +48,14 @@ padding: 26px;
     font-size: 26px;
     padding: 10px;
     border-radius: 11px;
+    margin: 8px;
     color: aliceblue;
+    text-decoration: none;
     background: linear-gradient(to left, #b12092, #3f025b);
 }
 
 .buttonGradient:hover {
+    opacity: 70%;
     transition: all 0.5s;
 
 }
