--- a/cripto/src/Components/style.css
+++ b/cripto/src/Components/style.css
@@ -1,70 +1,83 @@
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: linear-gradient(to bottom, #000000, #272042, #000000 );
-    height: 100vh;
+  background: linear-gradient(to bottom, #000000, #272042, #000000);
+  height: 100vh;
 }
 
 header {
-    background-color: transparent;
-   
+  background-color: transparent;
 }
 
 .logo {
-    display: flex;
-    justify-content: start;
-    height: 20px;
-    width: 20px;
+  display: flex;
+  justify-content: start;
+  height: 20px;
+  width: 20px;
 }
 
-.navbar{
-color: aliceblue;
-display: flex;
-justify-content: end;
-margin: 0px;
-gap: 15px;
-padding: 26px;
+.navbar {
+  color: aliceblue;
+  display: flex;
+  justify-content: end;
+  margin: 0px;
+  gap: 10px;
+  padding: 20px;
 }
 
 .Link {
-    margin-top: 16px;
-    text-decoration: none;
-    color: aliceblue;
-    font-size: 26px;
+  margin-top: 16px;
+  text-decoration: none;
+  color: aliceblue;
+  font-size: 26px;
 }
 
 .Link:hover {
-    color: #482252;
-    cursor: pointer;
-    transition: all 0.5s;
+  color: #482252;
+  cursor: pointer;
+  transition: all 0.5s;
 }
 
 .buttonGradient {
-    font-size: 26px;
-    padding: 10px;
-    border-radius: 11px;
-    margin: 8px;
-    color: aliceblue;
-    text-decoration: none;
-    background: linear-gradient(to left, #b12092, #3f025b);
+  font-size: 26px;
+  padding: 10px;
+  border-radius: 11px;
+  margin: 8px;
+  color: aliceblue;
+  text-decoration: none;
+  background: linear-gradient(to left, #b12092, #3f025b);
 }
 
 .buttonGradient:hover {
-    opacity: 70%;
-    transition: all 0.5s;
-
+  opacity: 70%;
+  transition: all 0.5s;
 }
 
 .navbar .imgLogo {
-    display: flex;
-    margin-right: 1200px;
+  display: flex;
+  margin-right: 1200px;
 }
 
 .imgMoeda {
-    margin-right: 100px;
+  margin-right: 100px;
+}
+
+.frase, h3{
+    font-size: 50px;
+    color: #fff;
+    gap: 5px;
+    margin-top: 60vh;
+}
+
+.footer,
+p {
+    margin-top: 100%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  color: #fff;
 }
