--- a/cripto/src/pages/Home.css
+++ b/cripto/src/pages/Home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 .texto-inicial1 {
@@ -26,4 +26,7 @@ body {
     right: 20px; 
 }
 
-/* Pagina de Cadastro*/
+
+
+
+
