--- a/cripto/src/Components/style.css
+++ b/cripto/src/Components/style.css
@@ -1,85 +1,62 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background: linear-gradient(to bottom, #000000, #272042, #000000);
-  height: 100vh;
-}
-
 header {
-  background-color: transparent;
-}
-header img {
-  
-}
-
-.logo {
-  display: flex;
-  justify-content: start;
-  height: 20px;
-  width: 20px;
+  background-color: #000;
+  padding: 10px 0;
 }
 
 .navbar {
-  color: aliceblue;
   display: flex;
-  margin: 0px  120px;
-  gap: 10px;
-  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5%;
+
+}
+
+.navbar-logo .imgLogo {
+  max-width: 100px;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 70px;
 }
 
 .Link {
-  margin-top: 16px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(228, 228, 228);
   text-decoration: none;
-  color: aliceblue;
-  font-size: 26px;
+  font-size: 20px;
+  transition: color 0.3s;
 }
 
 .Link:hover {
-  color: #482252;
-  cursor: pointer;
-  transition: all 0.5s;
+  color: #a714cc;
 }
 
-.buttonGradient {
-  font-size: 26px;
-  padding: 10px;
-  border-radius: 11px;
-  margin: 8px;
-  color: aliceblue;
+.navbar-button .buttonGradient {
+  background: linear-gradient(45deg, #560d4a, #bf2bff);
+  color: rgb(213, 213, 213);
+  padding: 15px 25px;
+  border-radius: 20px;
   text-decoration: none;
-  background: linear-gradient(to left, #b12092, #3f025b);
+  font-weight: bold;
+  transition: background 0.9s;
 }
 
 .buttonGradient:hover {
-  opacity: 70%;
-  transition: all 0.5s;
+  background: linear-gradient(45deg, #48003f, #77026e);
 }
 
-.navbar .imgLogo {
-  display: flex;
-  margin-right: 1200px;
-}
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    gap: 15px;
+  }
 
-.imgMoeda {
-  margin-right: 100px;
-}
+  .navbar-links {
+    gap: 15px;
+  }
 
-.frase, h3{
-    font-size: 50px;
-    color: #fff;
-    gap: 5px;
-    margin-top: 60vh;
-}
-
-.footer,
-p {
-    margin-top: 100%;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  color: #fff;
+  .navbar-button {
+    margin-top: 10px;
+  }
 }
