--- a/cripto/src/pages/Home.css
+++ b/cripto/src/pages/Home.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(0, 0, 0);
+    overflow-x: hidden
 }
 
 .texto-inicial1 {
@@ -18,12 +19,13 @@ body {
 }
 
 .imgMoeda img {
+    z-index: -1;
     width: 800px;
     height: 800px;
     object-fit: contain;
     position: absolute;
-    top: 6%;
-    right: 20px; 
+    top: -9%;
+    right: -170px; 
 }
 
 
