Importando components em App.tsx

--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -1,5 +1,5 @@
-body{
-    background: rgb(4, 0, 255);
-    color: black;
-
+body {
+   
+    background: linear-gradient(to bottom, #000, #3f025b);
+    color: white;
 }
