--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -8,7 +8,7 @@
 
 /* Centraliza tudo na tela */
 .tudo {
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -21,11 +21,10 @@
 /* Estilização do formulário */
 form {
     background: rgba(255, 255, 255, 0.9);
-    padding: 30px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 350px;
+    height: 100%;
     text-align: center;
 }
 
@@ -96,4 +95,4 @@ p {
         font-size: 0.9rem;
         padding: 0.8rem;
     }
-}
+} 
