--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -24,15 +24,16 @@ form {
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    height: 100%;
+    max-width: 600px; /* Ajuste para a largura desejada */
+    width: 100%; /* Ou qualquer valor maior */
     text-align: center;
 }
 
 /* Inputs */
 input {
     width: 100%;
-    padding: 12px;
-    font-size: 16px;
+    height: 80px;
+    font-size: 18px;
     border: 1px solid #ddd;
     border-radius: 5px;
     background: #f5f5f5;
@@ -53,12 +54,12 @@ input:focus {
 /* Botão */
 button {
     width: 100%;
-    padding: 12px;
+    padding: 15px;
+    font-size: 20px;
     border: none;
     border-radius: 20px;
     background: linear-gradient(to left, #b12092, #3f025b);
     color: white;
-    font-size: 16px;
     font-weight: bold;
     transition: all 0.3s ease;
 }
@@ -78,21 +79,3 @@ p {
     margin-left: 75px;
     margin-bottom: 5px;
 }
-
-/* 🔥 Responsividade para telas menores 🔥 */
-@media (max-width: 600px) {
-    form {
-        padding: 1.5rem;
-        max-width: 90%;
-    }
-
-    input {
-        font-size: 0.9rem;
-        padding: 0.8rem;
-    }
-
-    button {
-        font-size: 0.9rem;
-        padding: 0.8rem;
-    }
-} 
