--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -51,6 +51,14 @@ input:focus {
     margin-left: 50px;
 }
 
+img, olhos {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 20px;
+}
 /* Botão */
 button {
     width: 100%;
