--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -1,4 +1,4 @@
-/* Reset básico */
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +6,6 @@
     font-family: Arial, sans-serif;
 }
 
-/* Centraliza tudo na tela */
 .tudo {
     display: flex;
     justify-content: center;
@@ -15,17 +14,17 @@
     background-color: #ffffff; /* Fundo branco */
 }
 
-.tudo h1 {
-}
+/*.tudo h1 {
+}*/
 
 /* Estilização do formulário */
 form {
     background: rgba(255, 255, 255, 0.9);
-    padding: 40px;
+    padding: 60px; /* Aumentado o padding para mais espaço interno */
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px; /* Ajuste para a largura desejada */
-    width: 100%; /* Ou qualquer valor maior */
+    max-width: 1200px; /* Aumentado para uma largura maior */
+    width: 100%;
     text-align: center;
 }
 
@@ -86,4 +85,12 @@ p {
     font-size: 14px;
     margin-left: 75px;
     margin-bottom: 5px;
+}
+
+/*MObile*/
+@media (max-width: 768px) {
+    form {
+        padding: 40px;
+        max-width: 100%; 
+    }
 }
