--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -20,10 +20,10 @@
 /* Estilização do formulário */
 form {
     background: rgba(255, 255, 255, 0.9);
-    padding: 60px; /* Aumentado o padding para mais espaço interno */
+    padding: 60px; 
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 1200px; /* Aumentado para uma largura maior */
+    max-width: 1200px;
     width: 100%;
     text-align: center;
 }
@@ -81,7 +81,7 @@ button:hover {
 /* Mensagem de erro ou sucesso */
 p {
     text-align: center;
-    color: black;
+    color: rgb(47, 44, 44);
     font-size: 14px;
     margin-left: 75px;
     margin-bottom: 5px;
