--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -38,9 +38,8 @@ input {
     background: #f5f5f5;
     outline: none;
     margin-bottom: 15px;
+    position: relative;
 }
-
-/* Efeito ao clicar no input */
 input:focus {
     border-color: #8e44ad;
     background: #ffffff;
@@ -58,7 +57,6 @@ img, olhos {
     cursor: pointer;
     width: 20px;
 }
-/* Botão */
 button {
     width: 100%;
     padding: 15px;
@@ -71,7 +69,6 @@ button {
     transition: all 0.3s ease;
 }
 
-/* Efeito ao passar o mouse no botão */
 button:hover {
     cursor: pointer;
     transform: scale(1.05);
@@ -82,7 +79,7 @@ button:hover {
 p {
     text-align: center;
     color: rgb(47, 44, 44);
-    font-size: 14px;
+    font-size: 16px;
     margin-left: 75px;
     margin-bottom: 5px;
 }
