--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -1,76 +1,214 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
 
 body {
-    background: linear-gradient(to bottom, #000, #3f025b);
-    color: white;
+  background: linear-gradient(to bottom, #000000, #272042, #000000);
+  color: white;
+  text-align: center;
 }
 
-* {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+/*
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 50px;
 }
 
-.home {
-    background: linear-gradient(180deg, #0e061f, #140a2d);
-    min-height: 100vh;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .home-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    max-width: 1200px;
-    width: 100%;
-    gap: 40px;
-  } 
-  .text1 h1 {
-    font-size: 3rem;
-    line-height: 1.2;
-  }
-  
-  .text1 p {
-    margin: 20px 0;
-    font-size: 1.2rem;
-    color: #ccc;
-  }
-  
-  .imgMoeda {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .imgMoeda img {
-    width: 100%;
-    max-width: 250px;
-  }
-  
-  /* Responsividade 
-  @media (max-width: 768px) {
-    .home-content {
-      flex-direction: column;
-      text-align: center;
-    }
-  
-    imgMoeda {
-      margin-top: 30px;
-    }
-  
-    .imgMoeda img {
-      width: 180px;
-    }
-  
-    .tex1 h1 {
-      font-size: 2.2rem;
-    }
-  
-    .text1 p {
-      font-size: 1rem;
-    }
-  }
+nav a {
+  margin: 0 15px;
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.nav {
+  margin-top: 16px;
+  text-decoration: none;
+  color: aliceblue;
+  font-size: 26px;
+}
+
+.nav:hover {
+  color: #482252;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.cadastro {
+  font-size: 26px;
+  padding: 10px;
+  border-radius: 11px;
+  margin: 8px;
+  color: aliceblue;
+  text-decoration: none;
+  background: linear-gradient(to left, #b12092, #3f025b);
+}
+
+.cadastro:hover {
+  opacity: 70%;
+  transition: all 0.5s;
+  cursor: pointer;
+}*/
+
+.content {
+  max-width: 800px;
+  margin-top: 180px;
+}
+
+.content h1 {
+  font-size: 70px;
+}
+
+.content p {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #b3b3b3;
+}
+
+.container .moeda-image {
+  margin-top: 100px;
+  margin-left: 200px;
+  width: 350px;
+}
+
+.frase {
+  max-height: 650vh;
+  height: 110vh;
+  color: #b3b3b3;
+  margin-top: 70vh;
+}
+
+.frase h2 {
+  text-align: center;
+  font-size: 50px;
+}
+
+.frase p {
+  font-size: 30px;
+}
+
+.container-card {
+  padding: 50px 20px;
+  margin-bottom: 100px;
+}
+
+.container-card h1 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 200px;
+}
+
+.highlight {
+  color: #A13EA1;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+
+.card {
+  background: transparent;
+  border: 2px solid #A13EA1;
+  border-radius: 10px;
+  padding: 20px;
+  width: 300px;
+  text-align: center;
+}
+
+.card img {
+  width: 80px;
+  margin-bottom: 15px;
+}
+
+.card .cursos {
+  width: 90px;
+}
+
+.simulador {
+  display: flex;
+  align-items: center;
+}
+
+
+/*Página About
+.texto-about,
+.h1,
+.p {
+  font-size: 26px;
+  width: 100px;
+  height: 150px;
+  color: rgb(255, 255, 255);
+}
   */
+/*
+footer {
+  background: #272042;
+  padding: 15px;
+  color: #b3b3b3;
+  margin-top: 50px;
+}
+
+.footerInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footerLink a {
+  text-decoration: none;
+  color: #b3b3b3;
+  font-size: 16px;
+  transition: 0.3s; 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+.footerLink a:hover {
+  background: linear-gradient(to left, #dd28b6, #9b02e1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.redesSociais {
+  display: flex;
+  gap: 15px;
+  margin-right: 30px;
+}
+
+.redesSociais img {
+  width: 30px;
+  height: 30px;
+  display: block; 
+  margin-right: 10px;
+  transform: scale(1);
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.redesSociais a:hover img {
+  transform: scale(1.2);
+  filter: brightness(1.5);
+}
+
+
+.copy {
+  text-align: center;
+  margin-top: 30px;
+}
+*/
