--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -100,7 +100,7 @@ nav a {
 .frase {
   max-height: 650vh;
   height: 110vh;
-  color: #b3b3b3;
+  color: #ccc;
   margin-top: 70vh;
 }
 
@@ -111,7 +111,10 @@ nav a {
 }
 
 .frase p {
+  margin-top: 2rem;
   font-size: 30px;
+  color: #ccc;
+  
 }
 
 .container-card {
