--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -1,7 +1,7 @@
 .page {
   padding: 20px;
   font-family: 'Roboto', sans-serif;
-  background: linear-gradient(to bottom, #000, #272042);
+  background: linear-gradient(to bottom, #000, #272042, #000);
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -17,6 +17,14 @@
 .title {
   font-size: 3em;
   color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.highlight{
+  color: #833383;
+  font-size: 3em;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -96,10 +104,10 @@
 
 .chartContainer {
   flex-grow: 1;
-  max-width: 600px;
+  max-width: 90%;
   padding: 20px;
-  background: transparent;
-  border-radius: 10px;
+  background: rgba(0,0,0,0.4);
+  border-radius: 30px;
   box-shadow: none;
   color: #fff;
   display: flex;
