--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -29,6 +29,11 @@
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+.link {
+  text-decoration: none;
+  color: inherit;
+ 
+}
 
 .main {
   display: flex;
@@ -49,13 +54,23 @@
 .simulatorForm {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  max-height: 600px;
   gap: 15px;
 }
-
 
 .simulatorForm label {
   font-weight: 600;
   font-size: 1.1em;
+  color: #000;
+}
+
+.simulatorForm select {
+  margin-top: 8px;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #555;
+  background-color: transparent;
   color: #000;
 }
 
@@ -64,7 +79,8 @@
   padding: 12px;
   margin-top: 5px;
   border: 1px solid #555;
-  border-radius: 8px;
+  height: 60px;
+  border-radius: 18px;
   background-color: transparent;
   color: #000;
   transition: border-color 0.3s ease;
@@ -104,7 +120,8 @@
 
 .chartContainer {
   flex-grow: 1;
-  max-width: 90%;
+  max-width: 80%;
+  max-height: 600px;
   padding: 20px;
   background: rgba(0,0,0,0.4);
   border-radius: 30px;
@@ -123,6 +140,7 @@
 .selicText {
   font-size: 1.2em;
   font-weight: 600;
+  margin-right: 66px;
   color: #bb86fc;
   margin-bottom: 20px;
   text-align: center;
