--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -30,16 +30,18 @@ form {
 
 /* Inputs */
 input {
-    width: 100%;
-    height: 80px;
-    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    width: 500px;
+    padding: 1rem;
+    font-size: 1rem;
     border: 1px solid #ddd;
     border-radius: 5px;
     background: #f5f5f5;
     outline: none;
-    margin-bottom: 15px;
-    position: relative;
+    margin-bottom: 1rem;
 }
+
 input:focus {
     border-color: #8e44ad;
     background: #ffffff;
@@ -47,6 +49,9 @@ input:focus {
 
 .box {
     margin-left: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 img, olhos {
@@ -59,20 +64,21 @@ img, olhos {
 }
 button {
     width: 100%;
-    padding: 15px;
-    font-size: 20px;
+    padding: 1rem;
     border: none;
-    border-radius: 20px;
-    background: linear-gradient(to left, #b12092, #3f025b);
+    border-radius: 5px;
+    background: linear-gradient(90deg, #8e44ad, #732d91);
     color: white;
+    font-size: 1rem;
     font-weight: bold;
+    cursor: pointer;
     transition: all 0.3s ease;
 }
 
 button:hover {
     cursor: pointer;
+    background: linear-gradient(90deg, #732d91, #8e44ad);
     transform: scale(1.05);
-    background: linear-gradient(to left, #b12092, #3f025b);
 }
 
 /* Mensagem de erro ou sucesso */
@@ -84,10 +90,33 @@ p {
     margin-bottom: 5px;
 }
 
-/*MObile*/
-@media (max-width: 768px) {
+/* Extra large screens */
+@media (min-width: 1920px) {
+    body {
+        background: linear-gradient(to bottom, #000000, #272042, #000000) !important; 
+    }
+
+    .tudo {
+        padding: 4rem; /* Ajusta o espaçamento para telas maiores */
+        justify-content: center;
+    }
+
     form {
-        padding: 40px;
-        max-width: 100%; 
+        max-width: 500px; /* Aumenta a largura máxima do formulário */
+        padding: 3rem; /* Adiciona mais espaçamento interno */
+    }
+
+    h2, .paragrafo {
+        font-size: 3rem; /* Aumenta o tamanho da fonte */
+    }
+
+    input {
+        font-size: 1.2rem; /* Ajusta o tamanho da fonte dos inputs */
+        padding: 1.2rem; /* Adiciona mais espaçamento interno */
+    }
+
+    button {
+        font-size: 1.2rem; /* Aumenta o tamanho da fonte do botão */
+        padding: 1.2rem; /* Adiciona mais espaçamento interno */
     }
 }
