--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -54,8 +54,8 @@
 .simulatorForm {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  max-height: 600px;
+  max-width: 100%;
+  max-height: 650px;
   gap: 15px;
 }
 
@@ -80,6 +80,7 @@
   margin-top: 5px;
   border: 1px solid #555;
   height: 60px;
+  max-width: 100%;
   border-radius: 18px;
   background-color: transparent;
   color: #000;
