--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -7,17 +7,7 @@
 }
 
 .paragrafo {
-    color: #80419b;
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
-}
-
-.paragrafo, h4 {
-    color: #acabab;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
+    margin-left: 70px;
 }
 
 /* Centraliza tudo na tela */
@@ -37,20 +27,22 @@
     justify-content: center;
 }
 
-/* Estilização do formulário */
 form {
     background: rgba(255, 255, 255, 0.9);
-    padding: 2rem;
+    padding: 60px; 
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 1200px;
     width: 100%;
-    max-width: 300px; /* Reduz a largura máxima do formulário */
     text-align: center;
+    margin-right: 40px;
 }
 
 /* Inputs */
 input {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    width: 500px;
     padding: 1rem;
     font-size: 1rem;
     border: 1px solid #ddd;
@@ -60,27 +52,23 @@ input {
     margin-bottom: 1rem;
 }
 
-/* Efeito ao clicar no input */
 input:focus {
     border-color: #8e44ad;
     background: #ffffff;
 }
 
-/* Botão */
-button {
-    width: 100%;
-    padding: 1rem;
+#button {
+    height: 40px;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     background: linear-gradient(90deg, #8e44ad, #732d91);
     color: white;
-    font-size: 1rem;
+    font-size: 18px;
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
-/* Efeito ao passar o mouse no botão */
 button:hover {
     cursor: pointer;
     background: linear-gradient(90deg, #732d91, #8e44ad);
