--- a/cripto-react/src/pages/Login.css
+++ b/cripto-react/src/pages/Login.css
@@ -6,17 +6,13 @@
     font-family: Arial, sans-serif;
 }
 
-.paragrafo {
-    margin-left: 70px;
-}
-
 /* Centraliza tudo na tela */
 .tudo {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ffffff; 
+    background-color: #ffffff;
     padding: 2rem;
 }
 
@@ -27,9 +23,18 @@
     justify-content: center;
 }
 
+.paragrafo {
+    margin-left: 70px;
+    color: grey;
+}
+
+.paragrafo, h4 {
+    font-size: 20px;
+}
+
 form {
     background: rgba(255, 255, 255, 0.9);
-    padding: 60px; 
+    padding: 60px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
@@ -75,35 +80,50 @@ button:hover {
     transform: scale(1.05);
 }
 
-
+p {
+    text-align: center;
+    color: rgb(47, 44, 44);
+    font-size: 16px;
+    margin-left: 75px;
+    margin-bottom: 5px;
+}
 
 /* Extra large screens */
 @media (min-width: 1920px) {
     body {
-        background: linear-gradient(to bottom, #000000, #272042, #000000) !important; 
+        background: linear-gradient(to bottom, #000000, #272042, #000000) !important;
     }
 
     .tudo {
-        padding: 4rem; /* Ajusta o espaçamento para telas maiores */
+        padding: 4rem;
+        /* Ajusta o espaçamento para telas maiores */
         justify-content: center;
     }
 
     form {
-        max-width: 500px; /* Aumenta a largura máxima do formulário */
-        padding: 3rem; /* Adiciona mais espaçamento interno */
+        max-width: 500px;
+        /* Aumenta a largura máxima do formulário */
+        padding: 3rem;
+        /* Adiciona mais espaçamento interno */
     }
 
-    h2, .paragrafo {
-        font-size: 3rem; /* Aumenta o tamanho da fonte */
+    h2,
+    .paragrafo {
+        font-size: 3rem;
+        /* Aumenta o tamanho da fonte */
     }
 
     input {
-        font-size: 1.2rem; /* Ajusta o tamanho da fonte dos inputs */
-        padding: 1.2rem; /* Adiciona mais espaçamento interno */
+        font-size: 1.2rem;
+        /* Ajusta o tamanho da fonte dos inputs */
+        padding: 1.2rem;
+        /* Adiciona mais espaçamento interno */
     }
 
     button {
-        font-size: 1.2rem; /* Aumenta o tamanho da fonte do botão */
-        padding: 1.2rem; /* Adiciona mais espaçamento interno */
+        font-size: 1.2rem;
+        /* Aumenta o tamanho da fonte do botão */
+        padding: 1.2rem;
+        /* Adiciona mais espaçamento interno */
     }
 }
