--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -23,7 +23,7 @@
 }
 
 .highlight{
-  color: #833383;
+  color: #b12092;
   font-size: 3em;
   font-weight: bold;
   text-transform: uppercase;
@@ -54,7 +54,7 @@
 .simulatorForm {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
+  width: 100%;
   max-height: 650px;
   gap: 15px;
 }
@@ -95,9 +95,9 @@
 
 .simulatorForm button {
   padding: 12px;
-  height: 40px;
+  height: 50px;
   color: #fff;
-  background-color: #5c2d91;
+  background: linear-gradient(to right, #3f025b, #b12092);
   border: none;
   border-radius: 50px;
   font-size: 1.2em;
@@ -107,7 +107,7 @@
 }
 
 .simulatorForm button:hover {
-  background-color: #7a42c4;
+  background: linear-gradient(to right, #3f025b, #b12092);
 }
 
 .simulationResult {
@@ -121,8 +121,8 @@
 
 .chartContainer {
   flex-grow: 1;
-  max-width: 80%;
-  max-height: 600px;
+  max-width: 90%;
+  max-height: 650px;
   padding: 20px;
   background: rgba(0,0,0,0.4);
   border-radius: 30px;
@@ -135,7 +135,7 @@
 }
 
 .chartContainer svg .chart-line {
-  stroke: #5c2d91;
+  stroke: #3f025b;
 }
 
 .selicText {
