--- a/cripto-react/src/components/LessonCard.module.css
+++ b/cripto-react/src/components/LessonCard.module.css
@@ -72,6 +72,10 @@ button {
   align-self: center; 
 }
 
+button:hover {
+  background: linear-gradient(to right, #3f025b,  #b12092);
+}
+
 .locked {
   pointer-events: none;
 }
