--- a/cripto-react/src/pages/cadastro.css
+++ b/cripto-react/src/pages/cadastro.css
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ffffff; /* Fundo branco */
+    background-color: #ffffff;
 }
 
 .box {
