--- a/cripto-react/src/components/SimulatorPage.module.css
+++ b/cripto-react/src/components/SimulatorPage.module.css
@@ -60,8 +60,8 @@
   border: 4px solid transparent;
   border-radius: 30px;
   background:
-  linear-gradient(#000, #000) padding-box,
-  linear-gradient(to right,  #3f025b, #b12092) border-box;
+  linear-gradient(#000000d8, #000000d8) padding-box,
+  linear-gradient(to right, #b12092, #3f025b, #b12092) border-box;
 }
 
 .simulatorForm label {
@@ -139,8 +139,8 @@
   border: 4px solid transparent;
   border-radius: 30px;
   background:
-  linear-gradient(#000, #000) padding-box,
-  linear-gradient(to right,  #3f025b, #b12092) border-box;
+  linear-gradient(#000000d8, #000000d8) padding-box,
+  linear-gradient(to right, #b12092, #3f025b, #b12092) border-box;
 }
 
 .chartContainer svg .chart-line {
@@ -151,7 +151,7 @@
   font-size: 1.2em;
   font-weight: 600;
   margin-right: 66px;
-  color: #bb86fc;
+  color: #b12092;
   margin-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
