--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -75,7 +73,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;;
-  padding: 80px 8%;
+  padding: 0 8%;
   animation: fadeInUp 1.2s ease forwards;
   opacity: 0;
 }
@@ -90,7 +88,9 @@ nav {
     opacity: 1;
   }
 }
-
+.content {
+  margin: 0;
+}
 .content h1 {
   font-size: 95px;
   color: #fff;
@@ -103,6 +103,7 @@ nav {
   text-align: start;
   font-size: 40px;
   color: #fff;
+  margin-top: 0;
 }
 
 .moeda-image {
@@ -125,17 +126,108 @@ nav {
 .frase {
   text-align: center;
   padding: 40px 20px;
-  background-color: #a259ff;
   color: #fff;
 }
-
 .frase h2 {
-  font-size: 28px;
-  margin-bottom: 10px;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 500;
+  font-size: 50px;
+  margin: 70px 0;
+  text-align: center;
+  color: #fff;
+  animation: fadeInUp 1.2s ease forwards;
+  opacity: 0;
 }
 
 .frase p {
-  font-style: italic;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 30px;
+  margin-top: 20px;
+  text-align: center;
+  color: #fff;
+}
+
+.plataformaCursos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  margin-top: 70px;
+  color: #fff;
+}
+
+.plataformaCursos h2 {
+  font-weight: 500;
+  font-size: 50px;
+  margin: 70px 0;
+  text-align: center;
+  color: #fff;
+}
+
+.highlight {
+  color: #b12092;
+}
+
+.plataformaCursosContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding-top: 30px;
+}
+
+.plataformaCursosCard {
+  width: 300px;
+  height: 320px;
+  background: transparent;
+  border: 3px solid;
+  background:
+  linear-gradient(#000000, #000000) padding-box,
+  linear-gradient(to right, #b12092, #3f025b, #b12092) border-box;
+ /* border-image: linear-gradient(135deg, #b12092, #3f025b) padding-box;*/
+  border-radius: 20px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  box-shadow: 0 0 12px #3f025b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: transform 0.3s ease;
+}
+
+.plataformaCursosCard:hover {
+  transform: scale(1.03);
+}
+
+.plataformaCursosCardIcon img {
+  width: 200px;
+  height: 150px;
+  margin: 0 auto 20px;
+}
+
+.plataformaCursosCard h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.plataformaCursosCard p {
+  font-size: 16px;
+  color: #e0e0e0;
+  line-height: 1.5;
+}
+
+.simulador {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  margin-top: 10rem;
+  color: #fff;
 }
 
 /* Footer */
