--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Orbitron', sans-serif;
-  background: linear-gradient(135deg, #0d0d0d, #272042, #1a1a1a);
+  background: linear-gradient(135deg, #000, #272042, #1a1a1a);
   background-attachment: fixed;/* Fixa o fundo para não se mover com o scroll */
   color: #fff;
 }
@@ -93,7 +93,7 @@ nav {
 }
 .content h1 {
   font-size: 95px;
-  color: #fff;
+  color: #e4dfdfeb;
   margin-bottom: 20px;
   animation: glow 2s ease-in-out infinite alternate;
 }
@@ -262,6 +262,12 @@ nav {
   padding: 10px 20px;
 }
 
+.simuladorImage{
+  display: flex;
+  margin-left: 800px;
+ 
+
+}
 /* Footer */
 footer {
   color: #fff;
