Trocando cor fundo home

--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Orbitron', sans-serif;
-  background: linear-gradient(135deg, #000, #272042, #1a1a1a);
+  background: linear-gradient(135deg, #000, #1f1133, #000000);
   background-attachment: fixed;
   color: #fff;
 }
